--- a/windows/templates/setup_env_for_msagent.yml
+++ b/windows/templates/setup_env_for_msagent.yml
@@ -4,7 +4,7 @@ parameters:
 steps:
 - ${{ if eq(parameters.msagent, 'true') }}:
   - task: BatchScript@1
-    displayName: 'Install VS 2017'
+    displayName: 'Install Visual Studio'
     inputs:
       filename: 'windows/internal/vs_install.bat'
 
