--- a/.github/workflows/build-conda-images.yml
+++ b/.github/workflows/build-conda-images.yml
@@ -1,18 +1,8 @@
 name: Build conda docker images
 
 on:
-  push:
-    branches:
-      main
-    paths:
-      - conda/Dockerfile
-      - 'common/*'
-      - .github/workflows/build-conda-images.yml
+  workflow_dispatch:
   pull_request:
-    paths:
-      - conda/Dockerfile
-      - 'common/*'
-      - .github/workflows/build-conda-images.yml
 
 env:
   DOCKER_REGISTRY: "docker.io"
@@ -23,7 +13,7 @@ env:
 
 jobs:
   build-docker:
-    runs-on: linux.2xlarge
+    runs-on: ubuntu-latest
     strategy:
       matrix:
         cuda_version: ["10.2", "11.3", "11.5", "11.6", "11.7", "11.8", "cpu"]
