--- a/.github/workflows/build-magma-windows.yml
+++ b/.github/workflows/build-magma-windows.yml
@@ -1,20 +1,12 @@
 name: Build MAGMA for Windows
 
 on:
-  push:
-    branches:
-      main
-    paths:
-      - windows/internal/build_magma.bat
-      - .github/workflows/build-magma-windows.yml
+  workflow_dispatch:
   pull_request:
-    paths:
-      - windows/internal/build_magma.bat
-      - .github/workflows/build-magma-windows.yml
 
 jobs:
   build-windows-magma:
-    runs-on: windows-2019
+    runs-on: windows-latest
     strategy:
       matrix:
         cuda_version: ["117", "116"]
@@ -38,7 +30,7 @@ jobs:
   push-windows-magma:
     if: ${{ github.event_name == 'push' && github.ref == 'refs/heads/main' }}
     environment: magma
-    runs-on: ubuntu-18.04
+    runs-on: ubuntu-latest
     needs: build-windows-magma
     steps:
       - name: Download all artifacts
